# carto-tools

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  area_error.sh  intersections.sh  similarity.sh
data/belgium/: belgium.geojson  belgium_cartogram.geojson  belgium_intersections.geojson  belgium_population.csv
include/: constants.hpp
include/distance/: distance.h  distance.hpp  frechet_distance.h  frechet_distance.hpp  hausdorff_distance.h  hausdorff_distance.hpp  symmetric_difference.h  symmetric_difference.hpp
include/error/: area_weighted_mean_error.h  area_weighted_mean_error.hpp  max_relative_area_error.h  max_relative_area_error.hpp
include/intersection/: overlap_intersection.h  overlap_intersection.hpp  self_intersection.h  self_intersection.hpp
include/map/: map.h  map.hpp
include/parse/: parse_arguments.hpp  parse_csv.h  parse_csv.hpp  parse_geojson.h  parse_geojson.hpp
include/polygon_with_holes/: polygon_with_holes.h  polygon_with_holes.hpp
include/region/: region.h  region.hpp
include/task/: compute_area_error.hpp  compute_similarity.hpp  generate_target_csv.hpp  report_intersections.hpp
include/task_handler/: task_handler.hpp
include/write/: svg.h  svg.hpp  write_csv.h  write_csv.hpp  write_svg.h  write_svg.hpp
src/: main.cpp
src/distance/: distance.cpp  frechet_distance.cpp  hausdorff_distance.cpp  symmetric_difference.cpp
src/error/: area_weighted_mean_error.cpp  max_relative_area_error.cpp
src/intersection/: overlap_intersection.cpp  self_intersection.cpp
src/map/: map.cpp
src/parse/: parse_arguments.cpp  (+2 more)
(+10 files in other folders)
